--- a/bib/bib-lecture.bib
+++ b/bib/bib-lecture.bib
@@ -446,3 +446,18 @@
 }
 
 
+@article{baitan_2021,
+	title = {{THE} {ADVANTAGES} {OF} {USING} {THE} {MILITARY} {PENTATHLON} {IN} {PREPARATION} {FOR} {MILITARY} {COMBAT}},
+	volume = {10},
+	issn = {2284-9378, 2284-936X},
+	url = {https://revista.unap.ro/index.php/bulletin/article/view/1226},
+	doi = {10.53477/2284-9378-21-22},
+	number = {3},
+	urldate = {2025-05-06},
+	journal = {BULLETIN OF "CAROL I" NATIONAL DEFENCE UNIVERSITY},
+	author = {Băițan, George-Florin},
+	month = oct,
+	year = {2021},
+	pages = {47--53}
+}
+
